fix lint issues

--- a/src/assets/brands/default/styles/_theme.scss
+++ b/src/assets/brands/default/styles/_theme.scss
@@ -11,12 +11,15 @@ $bg-tertiary-color: $darkBlue;
 $text-primary-color: $softBlack;
 $text-secondary-color: $gray;
 $text-tertiary-color: $white;
+$text-fourth-color:$softGray;
 
 $title-primary-color: $softBlack;
 $title-secondary-color: $darkGray;
 
 $btn-primary-bg-color: $softBlue;
 $btn-secondary-bg-color: $white;
+$btn-tertiary-bg-color: $darkGray;
+
 
 $btn-primary-text-color: $white;
 $btn-secondary-text-color: $softBlue;
