--- a/src/components/shared/molecules/Forms/_index.scss
+++ b/src/components/shared/molecules/Forms/_index.scss
@@ -150,3 +150,10 @@
 .consult-register-text-secondry{
     color: $text-fourth-color;
 }
+
+.consultant-register-bg-danger{
+    background-color: $error-color;
+}
+.consultant-education-icons{
+    color: $text-tertiary-color;
+}
