fix folder structure issue, add search results and suggestions, add auth validations

--- a/src/assets/brands/default/styles/_theme.scss
+++ b/src/assets/brands/default/styles/_theme.scss
@@ -7,6 +7,7 @@ sans-serif;
 $bg-primary-color: $white;
 $bg-secondary-color: $lightGray;
 $bg-tertiary-color: $darkBlue;
+$bg-fourth-color:$mediumGray;
 
 $text-primary-color: $softBlack;
 $text-secondary-color: $gray;
