--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -5,6 +5,7 @@ $gray: #828282; //b3
 $softGray: #dadada; //line
 $lightGray: #f2f2f2; //w2
 $white: #ffffff; //w1
+$mediumGray:#F8F8F8; //w3
 
 $softBlue:#1174A8;
 $darkBlue: #022C42;
