--- a/src/components/organisms/_index.scss
+++ b/src/components/organisms/_index.scss
@@ -7,3 +7,5 @@
 @import './chat/chatScreen/index';
 @import './chat/chatList/index';
 @import './chat/chatContainerWrapper/index';
+@import './consultantForms/index';
+
