--- a/src/components/organisms/authForms/_index.scss
+++ b/src/components/organisms/authForms/_index.scss
@@ -1,38 +1,3 @@
-.Auth-form-container {
-display: flex;
-justify-content: center;
-align-items: center;
-
-height: 100vh;
-}
-
-.Auth-form {
-width: 420px;
-box-shadow:  1px 1px 10px rgba(0, 0, 0 , 0.16);
-padding-top: 30px;
-padding-bottom: 20px;
-border-radius: 8px;
-background-color: white;
-}
-
-.Auth-form-content {
-padding-left: 12%;
-padding-right: 12%;
-}
-
-.Auth-form-title {
-text-align: center;
-margin-bottom: 1em;
-font-size: 24px;
-color: rgb(34, 34, 34);
-font-weight: 800;
-}
-
-label {
-font-size: 14px;
-font-weight: 600;
-color: rgb(34, 34, 34);
-}
 
 .auth-form-container{
   background-color: $white;
@@ -41,7 +6,7 @@ color: rgb(34, 34, 34);
 }
 
 .auth-svg-container{
-background-color: $lightBlue;
+background-color: $bg-secondary-color;
 min-height: 100vh;
 overflow: hidden;
 }
@@ -61,6 +26,8 @@ z-index: -1;
 
 .auth-text-container{
   border: none;
+  background-color: $bg-primary-color;
+
 }
 .auth-text-input-container{
   display: flex;
