add calender modal

--- a/src/assets/brands/default/styles/_theme.scss
+++ b/src/assets/brands/default/styles/_theme.scss
@@ -20,6 +20,8 @@ $title-secondary-color: $darkGray;
 $btn-primary-bg-color: $softBlue;
 $btn-secondary-bg-color: $white;
 $btn-tertiary-bg-color: $darkGray;
+$btn-fourth-bg-color:$purple;
+$btn-fifth-bg-color:$lightBlue;
 
 
 $btn-primary-text-color: $white;
