--- a/src/components/organisms/_index.scss
+++ b/src/components/organisms/_index.scss
@@ -8,4 +8,5 @@
 @import './chat/chatList/index';
 @import './chat/chatContainerWrapper/index';
 @import './consultantForms/index';
+@import './calenderModal/index';
 
