chat acceptance card

--- a/src/assets/brands/default/styles/_theme.scss
+++ b/src/assets/brands/default/styles/_theme.scss
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 $primary-font: 'Poppins';
-$secondary-font: 'Inter',
-sans-serif;
+$secondary-font: 'Inter', sans-serif;
 
 $bg-primary-color: $white;
 $bg-secondary-color: $lightGray;
@@ -11,7 +10,7 @@ $bg-tertiary-color: $darkBlue;
 $text-primary-color: $softBlack;
 $text-secondary-color: $gray;
 $text-tertiary-color: $white;
-$text-fourth-color:$softGray;
+$text-fourth-color: $softGray;
 
 $title-primary-color: $softBlack;
 $title-secondary-color: $darkGray;
@@ -19,7 +18,6 @@ $title-secondary-color: $darkGray;
 $btn-primary-bg-color: $softBlue;
 $btn-secondary-bg-color: $white;
 $btn-tertiary-bg-color: $darkGray;
-
 
 $btn-primary-text-color: $white;
 $btn-secondary-text-color: $softBlue;
@@ -33,6 +31,7 @@ $tertiary-border-color: $lightBlue;
 $btn-link-text-color: $softGray;
 $btn-link-text-color-hover: $black;
 
+$error-color: $red;
 $bg-disabled-color: $lightGray;
 $text-disabled-color: $softGray;
 
@@ -40,3 +39,4 @@ $error-color: $red;
 $success-color: $green;
 $header-primary-color: $darkBlue;
 $tag-bg-primary-color: $gray;
+$chat-bg-color: $lightGray;
