--- a/src/components/organisms/chat/chatList/_index.scss
+++ b/src/components/organisms/chat/chatList/_index.scss
@@ -1,8 +1,9 @@
 .chat-list {
-  height: auto;
+  height: 85vh;
   display: flex;
   justify-content: flex-end;
   padding-right: 0px;
+  overflow: scroll;
 }
 
 .chat-card {
