--- a/src/components/organisms/_index.scss
+++ b/src/components/organisms/_index.scss
@@ -9,4 +9,5 @@
 @import './chat/chatContainerWrapper/index';
 @import './consultantForms/index';
 @import './calenderModal/index';
+@import './wizards/index';
 
