--- a/src/components/molecules/searchInput/_index.scss
+++ b/src/components/molecules/searchInput/_index.scss
@@ -10,6 +10,9 @@ background-color: $btn-tertiary-bg-color;
 }
 
 .search-button-container{
-  background-color: $btn-tertiary-bg-color;
+  background-color: $btn-primary-bg-color;
 
+}
+.search-form-container{
+  border-radius:2rem;
 }
