--- a/src/components/organisms/_index.scss
+++ b/src/components/organisms/_index.scss
@@ -10,4 +10,5 @@
 @import './consultantForms/index';
 @import './calenderModal/index';
 @import './wizards/index';
+@import './homeOnboarding/index'
 
