--- a/src/assets/brands/default/styles/_theme.scss
+++ b/src/assets/brands/default/styles/_theme.scss
@@ -12,6 +12,8 @@ $text-primary-color: $softBlack;
 $text-secondary-color: $gray;
 $text-tertiary-color: $white;
 
+$text-primary-bg-color: $lowLightGray;
+
 $title-primary-color: $softBlack;
 $title-secondary-color: $darkGray;
 
@@ -37,3 +39,5 @@ $error-color: $red;
 $success-color: $green;
 $header-primary-color: $darkBlue;
 $tag-bg-primary-color: $gray;
+$icon-primary-bg-color: $gray;
+$icon-secondary-bg-color: $softBlue;
