--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -4,6 +4,7 @@ $darkGray: #4f4f4f; //b2
 $gray: #828282; //b3
 $softGray: #dadada; //line
 $lightGray: #f2f2f2; //w2
+$lowLightGray: #f8f8f8; //w3
 $white: #ffffff; //w1
 
 $softBlue:#1174A8;
