--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -71,10 +71,12 @@ button {
   color: #ffffff !important;
   background: #1174A8 !important;
   border: 1px solid #1174A8;
-  border-radius: 5px;
+  border-radius: 2px;
   box-sizing: border-box;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  font-weight: 300; }
 
 .primary-button:hover {
   color: #1174A8 !important;
@@ -143,12 +145,12 @@ button {
 .default-text-input {
   height: 40px;
   outline: none;
-  border: 2px solid #828282;
+  border: 2px solid #f2f2f2;
   background-color: #f2f2f2; }
 
 .default-text-input:focus {
   outline: none;
-  border: 2px solid #828282; }
+  border: 2px solid #f2f2f2; }
 
 .form-control:focus {
   box-shadow: 0 0 1px 1px #828282; }
@@ -186,9 +188,49 @@ input[type='number'] {
   padding-left: 9px; }
 
 .dropZoneContainer {
-  border: dashed;
   border-width: thin;
-  background-color: #f2f2f2; }
+  background-color: #f2f2f2;
+  border-color: #828282; }
+
+.dropzone-browse-text {
+  color: #1174A8; }
+
+.container-image {
+  height: min-content;
+  line-height: 115px;
+  text-align: center;
+  border: 1px solid red; }
+
+.dropzone-image-fit {
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle; }
+
+.dropZoneContainer:hover .dropzone-overlay {
+  bottom: 0;
+  height: 100%; }
+
+.dropzone-text {
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 1; }
+
+.dropzone-overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.5);
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .2s ease; }
 
 .default-date-input {
   height: 40px;
@@ -218,17 +260,23 @@ input[type='number'] {
   text-overflow: ellipsis;
   overflow: hidden;
   background-color: #f2f2f2;
-  color: #333333;
-  border-color: #f2f2f2; }
+  color: #828282;
+  border-color: #f2f2f2;
+  border-radius: 1px; }
 
 .drop-down-toggle:hover {
-  color: #333333;
-  background-color: #dadada;
+  background-color: #f2f2f2;
+  color: #828282;
   border-color: #f2f2f2; }
 
 .drop-down-toggle:active {
-  color: #333333;
-  background-color: #dadada;
+  background-color: #f2f2f2;
+  color: #828282;
+  border-color: #f2f2f2; }
+
+.drop-down-toggle:focus {
+  background-color: #f2f2f2;
+  color: #828282;
   border-color: #f2f2f2; }
 
 .drop-down {
@@ -243,34 +291,41 @@ input[type='number'] {
   align-content: space-between; }
 
 .dropdown-toggle::after {
-  margin-left: 20px; }
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  margin-top: -2px; }
 
 .show > .btn-secondary.dropdown-toggle {
   background-color: #f2f2f2;
-  color: #333333;
+  color: #828282;
   border-color: #f2f2f2;
   outline: none; }
 
 .btn-secondary:focus {
   background-color: #f2f2f2;
-  color: #333333;
+  color: #828282;
   border-color: #f2f2f2;
   outline: none;
   box-shadow: none; }
 
 .btn-secondary:active {
   background-color: #f2f2f2;
-  color: #333333;
+  color: #828282;
   border-color: #f2f2f2;
   outline: none;
   box-shadow: none; }
 
 .show > .btn-secondary.dropdown-toggle:focus {
   box-shadow: none;
-  outline: none; }
+  outline: none;
+  background-color: #f2f2f2; }
+
+.dropdown-item {
+  color: #333333; }
 
 .dropdown-item.active {
-  background-color: #dadada;
+  background-color: #f2f2f2;
   color: #333333; }
 
 .user-details {
@@ -776,15 +831,66 @@ label {
     margin-left: 1rem; }
 
 .stepper-circle {
-  height: 80px;
-  width: 80px;
-  border-radius: 40px;
+  height: 60px;
+  width: 60px;
+  border-radius: 30px;
+  background-color: #828282;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 1.1rem; }
+
+.stepper-line {
+  height: 3px;
+  width: auto;
+  background-color: #828282;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 30px; }
+
+.stepper-active {
+  background-color: #1174A8; }
+
+.stepper-title {
+  color: #828282;
+  font-weight: 500;
+  font-size: 1.1rem; }
+
+.rich-text-editor {
+  padding: 10px;
+  margin: 0;
+  border: none;
+  outline: none;
+  height: auto;
+  min-height: 300px;
+  max-height: 400px; }
+
+.rich-text-editor-wrapper {
+  padding: 0px;
+  margin: 0;
+  background-color: #f8f8f8;
+  border: none; }
+
+.rich-text-editor-toolbar {
+  background-color: #f2f2f2;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.rich-text-editor-toolbar::before {
+  content: '';
+  position: absolute;
+  bottom: 0%;
+  left: 3%;
+  right: 3%;
+  border-bottom: 2px solid #828282;
+  width: 94%; }
+
+.rdw-option-wrapper {
   background-color: #f2f2f2; }
 
-.stepper-container {
-  border: 2px solid #828282;
-  border-radius: 2px;
-  background: #f2f2f2; }
+.rdw-dropdown-selectedtext {
+  background-color: #f2f2f2; }
 
 .main-container {
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
@@ -978,6 +1084,74 @@ small {
 
 .header-bg {
   background: #022C42 !important; }
+
+.add-service-input-label {
+  font-size: 1.1rem;
+  font-weight: 400;
+  color: #4f4f4f; }
+
+.add-service-main-text {
+  font-size: 2rem;
+  color: #4f4f4f;
+  font-weight: 600; }
+
+.add-service-category-dropdown {
+  width: 100%; }
+
+.add-service-category-dropdown-menu {
+  width: 90%; }
+
+.add-service-category-dropdown-container {
+  width: 100%; }
+
+.add-service-gallery-dropzone {
+  width: 100%;
+  margin: 0;
+  height: 160px; }
+
+.add-service-gallery-dropzone-add-more {
+  background-color: #ffffff;
+  border: 2px dashed #828282;
+  width: 100%;
+  color: #1174A8;
+  cursor: pointer; }
+
+.add-service-description-label {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #4f4f4f;
+  width: 55%; }
+
+.publish-image {
+  width: 22%; }
+
+.publish-service-main-text {
+  font-size: 2.2rem;
+  color: #4f4f4f;
+  font-weight: 700; }
+
+.publish-service-sub-text {
+  font-size: 1rem;
+  color: #4f4f4f;
+  font-weight: 400;
+  width: 30%; }
+
+.stepper-container {
+  border: 2px solid #f2f2f2;
+  border-radius: 2px;
+  margin-top: 25px;
+  padding: 10px;
+  padding-top: 40px;
+  padding-bottom: 30px; }
+
+.stepper-next-button {
+  width: 180px;
+  height: 45px; }
+
+.add-service-warning-label {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #B93434; }
 
 .tag-container {
   height: 2rem;
