--- a/src/components/shared/atoms/button/_style.scss
+++ b/src/components/shared/atoms/button/_style.scss
@@ -6,10 +6,12 @@
   color: $btn-primary-text-color !important;
   background: $btn-primary-bg-color !important;
   border: 1px solid $btn-primary-border-color;
-  border-radius: 5px;
+  border-radius: 2px;
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  font-weight: 300;
 }
 .primary-button:hover {
   color: $btn-secondary-text-color !important;
