--- a/src/components/shared/atoms/dropZone/_styles.scss
+++ b/src/components/shared/atoms/dropZone/_styles.scss
@@ -8,7 +8,53 @@
   }
 
   .dropZoneContainer {
-    border: dashed;
     border-width: thin;
     background-color: $bg-secondary-color;
+    border-color: $primary-border-color;
   }
+
+  .dropzone-browse-text{
+    color: $btn-secondary-text-color;
+  }
+
+  .container-image {
+    height: min-content;
+    line-height: 115px;
+    text-align: center;
+    border: 1px solid red;
+}
+.dropzone-image-fit {
+    max-width:100%;
+    max-height:100%;
+    vertical-align: middle;
+}
+
+.dropZoneContainer:hover .dropzone-overlay {
+  bottom: 0;
+  height: 100%;
+}
+
+
+.dropzone-text {
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 1;
+}
+
+.dropzone-overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.5);
+  overflow: hidden;
+  width: 100%;
+  height:0;
+  transition: .2s ease;
+}
