--- a/src/components/shared/atoms/textInput/_style.scss
+++ b/src/components/shared/atoms/textInput/_style.scss
@@ -1,13 +1,13 @@
 .default-text-input{
   height: 40px;
   outline: none;
-  border: 2px solid $primary-border-color;
+  border: 2px solid $secondary-border-color;
   background-color:$bg-secondary-color;
 }
 
 .default-text-input:focus {
   outline: none;
-  border: 2px solid $primary-border-color;
+  border: 2px solid $secondary-border-color;
 }
 
 .form-control:focus {
