--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1027,6 +1027,31 @@ input[type='number'] {
 .rdw-dropdown-selectedtext {
   background-color: #f2f2f2; }
 
+.stepper-circle {
+  height: 60px;
+  width: 60px;
+  border-radius: 30px;
+  background-color: #828282;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 1.1rem; }
+
+.stepper-line {
+  height: 3px;
+  width: auto;
+  background-color: #828282;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 30px; }
+
+.stepper-active {
+  background-color: #1174A8; }
+
+.stepper-title {
+  color: #828282;
+  font-weight: 500;
+  font-size: 1.1rem; }
+
 .main-container {
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -1247,50 +1272,6 @@ small {
   background: #022C42 !important;
   box-shadow: 0px 6px 18px -3px rgba(0, 0, 0, 0.2); }
 
-.accept-btn {
-  background-color: #33935C !important; }
-
-.decline-btn {
-  background-color: #B93434 !important; }
-
-.response-btn {
-  min-width: 100px;
-  width: 10vw;
-  min-height: 50px;
-  height: 4vh;
-  color: #ffffff !important; }
-
-.chat-response-btns {
-  display: flex;
-  width: 130%;
-  justify-content: space-between;
-  align-items: center; }
-
-.selectable-timeslot-wrapper {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  padding: 0.5rem;
-  border-radius: 10px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #022C42;
-  background-color: #022C42;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  color: #ffffff; }
-
-.selectable-timeslot-wrapper:hover {
-  background-color: #ffffff;
-  color: #022C42; }
-
-.selectable-timeslot-container {
-  padding-top: 1rem; }
-
-.selectable-timeslot-time-container {
-  overflow: hidden;
-  white-space: nowrap; }
-
 .add-service-input-label {
   font-size: 1.1rem;
   font-weight: 400;
@@ -1358,6 +1339,50 @@ small {
   font-size: 1rem;
   font-weight: 400;
   color: #B93434; }
+
+.accept-btn {
+  background-color: #33935C !important; }
+
+.decline-btn {
+  background-color: #B93434 !important; }
+
+.response-btn {
+  min-width: 100px;
+  width: 10vw;
+  min-height: 50px;
+  height: 4vh;
+  color: #ffffff !important; }
+
+.chat-response-btns {
+  display: flex;
+  width: 130%;
+  justify-content: space-between;
+  align-items: center; }
+
+.selectable-timeslot-wrapper {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 0.5rem;
+  border-radius: 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #022C42;
+  background-color: #022C42;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  color: #ffffff; }
+
+.selectable-timeslot-wrapper:hover {
+  background-color: #ffffff;
+  color: #022C42; }
+
+.selectable-timeslot-container {
+  padding-top: 1rem; }
+
+.selectable-timeslot-time-container {
+  overflow: hidden;
+  white-space: nowrap; }
 
 .tag-container {
   height: 2rem;
