--- a/src/assets/typography/_index.scss
+++ b/src/assets/typography/_index.scss
@@ -44,3 +44,20 @@
   font-size: 4rem;
 
 }
+
+.font-primary-color{
+  color: $text-primary-color;
+}
+
+.font-secondry-color{
+  color: $text-secondary-color;
+
+}
+
+.font-tertiary-color{
+  color: $text-tertiary-color;
+}
+
+.font-fourth-color{
+  color: $text-fourth-color;
+}
