--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -979,15 +979,8 @@ input[type='number'] {
   width: '6rem';
   height: 100%;
   object-fit: cover;
-  border-radius: 20px;
-  border: 5px solid white; }
-
-.service-card-profile-image {
-  width: '6rem';
-  height: 100%;
-  object-fit: cover;
-  border-radius: 20px;
-  border: 5px solid white; }
+  border-radius: 15px;
+  border: 3px solid white; }
 
 .service-card-service-image {
   height: 8rem;
@@ -998,9 +991,9 @@ input[type='number'] {
   object-fit: cover; }
 
 .service-card-profile-image-container {
-  width: '6rem';
-  height: '6rem';
-  border-radius: 20px;
+  width: '5rem';
+  height: '5rem';
+  border-radius: 15px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2); }
 
 .consultant-card-profile-image-container {
@@ -1026,11 +1019,6 @@ input[type='number'] {
   margin-bottom: 1rem;
   font-size: 16px; }
 
-.service-card-body-text {
-  font-size: 13px;
-  line-height: 20px;
-  color: #828282; }
-
 .consultant-card-title-text {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -1043,10 +1031,11 @@ input[type='number'] {
 
 .service-card-column-divider {
   height: 100%;
-  width: 25%;
   border-right: 1px solid rgba(0, 0, 0, 0.8);
+  padding-right: 1rem;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  white-space: nowrap; }
 
 .service-card-availability-container {
   position: absolute;
@@ -1088,7 +1077,8 @@ small {
 
 .service-card-start-button {
   display: flex;
-  width: 75%;
+  width: 100%;
+  align-items: center;
   justify-content: center; }
 
 .service-card-start-button:hover {
@@ -1163,6 +1153,18 @@ small {
 
 .consultant-image-icons {
   color: #ffffff; }
+
+.service-card-consultant-name-container {
+  background-color: #f2f2f2;
+  padding: 5px;
+  padding-left: 6.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  /* number of lines to show */
+  line-clamp: 1;
+  -webkit-box-orient: vertical; }
 
 .search-text-button {
   border-radius: 2px; }
