--- a/src/components/molecules/cards/_index.scss
+++ b/src/components/molecules/cards/_index.scss
@@ -9,17 +9,10 @@
     width: '6rem';
     height: 100%;
     object-fit: cover;
-    border-radius: 20px;
-    border: 5px solid white;
+    border-radius: 15px;
+    border: 3px solid white;
 }
 
-.service-card-profile-image {
-    width: '6rem';
-    height: 100%;
-    object-fit: cover;
-    border-radius: 20px;
-    border: 5px solid white;
-}
 
 .service-card-service-image {
     height: 8rem;
@@ -31,9 +24,9 @@
     object-fit: cover;
 }
 .service-card-profile-image-container {
-    width: '6rem';
-    height: '6rem';
-    border-radius: 20px;
+    width: '5rem';
+    height: '5rem';
+    border-radius: 15px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -64,11 +57,6 @@
     font-size: 16px;
 }
 
-.service-card-body-text {
-    font-size: 13px;
-    line-height: 20px;
-    color: $text-secondary-color;
-}
 
 .consultant-card-title-text {
     margin-top: 1rem;
@@ -84,10 +72,11 @@
 
 .service-card-column-divider {
     height: 100%;
-    width: 25%;
     border-right: 1px solid rgba(0, 0, 0, 0.8);
+    padding-right: 1rem;
     display: flex;
     justify-content: center;
+    white-space: nowrap;
 }
 
 .service-card-availability-container {
@@ -135,7 +124,8 @@ small {
 
 .service-card-start-button {
     display: flex;
-    width: 75%;
+    width:100%;
+    align-items: center;
     justify-content: center;
 }
 
@@ -218,4 +208,17 @@ small {
 
 .consultant-image-icons{
     color: $text-tertiary-color;
+}
+
+.service-card-consultant-name-container{
+    background-color: $bg-secondary-color;
+    padding: 5px;
+    padding-left: 6.5rem;
+    overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 1; /* number of lines to show */
+           line-clamp: 1; 
+   -webkit-box-orient: vertical;
+
 }
