--- a/src/components/organisms/homeOnboarding/_index.scss
+++ b/src/components/organisms/homeOnboarding/_index.scss
@@ -29,6 +29,17 @@
 .onboarding-title{
   color: $text-tertiary-color;
   line-height: 1;
+  font-size: 10vw;
+  @media (min-width: 500px) {
+      font-size: 60px;
+  
+  }
+  
+  /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+  @media(max-width: 600px) {
+      font-size: 10vw;
+  }
+
 }
 
 .onboarding-description{
