categories layout fixed

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -506,20 +506,6 @@ input[type='number'] {
   justify-content: center;
   text-align: center; }
 
-.card-list {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
-  flex-wrap: wrap; }
-
-.card-list:after {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-content: left;
-  flex-wrap: wrap; }
-
 .category-view-btn {
   font-size: 18px;
   padding: 14px 40px; }
@@ -1225,15 +1211,7 @@ small {
 
 .category-card-container {
   box-sizing: border-box;
-  width: 23rem;
-  background: #ffffff;
-  border: 1px solid #C0E1FF;
-  box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
-  margin-top: 5px;
-  margin-bottom: 5px;
-  margin-right: 2%;
-  margin-left: 2%;
-  padding: 2px; }
+  border: none; }
 
 @media only screen and (max-width: 600px) {
   .category-card-container {
