--- a/src/components/molecules/cards/_index.scss
+++ b/src/components/molecules/cards/_index.scss
@@ -1,224 +1,221 @@
 .main-container {
-    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    max-width: 18rem;
-    min-width: 17rem;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  max-width: 18rem;
+  min-width: 17rem;
 }
 
 .service-card-profile-image {
-    width: '6rem';
-    height: 100%;
-    object-fit: cover;
-    border-radius: 15px;
-    border: 3px solid white;
+  width: '6rem';
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+  border: 3px solid white;
 }
 
-
 .service-card-service-image {
-    height: 8rem;
-    object-fit: cover;
+  height: 8rem;
+  object-fit: cover;
 }
 
 .consultant-card-service-image {
-    height: 6rem;
-    object-fit: cover;
+  height: 6rem;
+  object-fit: cover;
 }
 .service-card-profile-image-container {
-    width: '5rem';
-    height: '5rem';
-    border-radius: 15px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  width: '5rem';
+  height: '5rem';
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .consultant-card-profile-image-container {
-    width: '5rem';
-    height: '5rem';
-    border-radius: 20px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  width: '5rem';
+  height: '5rem';
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .consultant-card-profile-card-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .consultant-card-profile-image {
-    width: '6rem';
-    height: 100%;
-    object-fit: cover;
-    border-radius: 20px;
-    border: 3px solid white;
+  width: '6rem';
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  border: 3px solid white;
 }
 
 .service-card-title-text {
-    margin-top: -2.5rem;
-    margin-left: 7rem;
-    margin-bottom: 1rem;
-    font-size: 16px;
+  margin-top: -2.5rem;
+  margin-left: 7rem;
+  margin-bottom: 1rem;
+  font-size: 16px;
 }
 
-
 .consultant-card-title-text {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    font-size: 16px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: 16px;
 }
 
 .consultant-card-body-text {
-    font-size: 13px;
-    line-height: 20px;
-    color: #676767;
+  font-size: 13px;
+  line-height: 20px;
+  color: #676767;
 }
 
 .service-card-column-divider {
-    height: 100%;
-    border-right: 1px solid rgba(0, 0, 0, 0.8);
-    padding-right: 1rem;
-    display: flex;
-    justify-content: center;
-    white-space: nowrap;
+  height: 100%;
+  border-right: 1px solid rgba(0, 0, 0, 0.8);
+  padding-right: 1rem;
+  display: flex;
+  justify-content: center;
+  white-space: nowrap;
 }
 
 .service-card-availability-container {
-    position: absolute;
-    border: 3px solid white;
-    top: -5px;
-    right: -5px;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
+  position: absolute;
+  border: 3px solid white;
+  top: -5px;
+  right: -5px;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
 }
 
 .consult-card-container {
-    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 7px;
-    margin: 10px;
-    max-width: 18.75rem;
-    overflow: hidden;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 7px;
+  margin: 10px;
+  max-width: 18.75rem;
+  overflow: hidden;
 }
 
 .consultant-card-availability-container {
-    position: absolute;
-    border: 3px solid white;
-    top: -5px;
-    right: -5px;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
+  position: absolute;
+  border: 3px solid white;
+  top: -5px;
+  right: -5px;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
 }
 
 small {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 11px;
-    line-height: 20px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 20px;
 }
 
 .service-card-footer-container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 .consult-view-btn {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .service-card-start-button {
-    display: flex;
-    width:100%;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .service-card-start-button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .category-card-container {
-    box-sizing: border-box;
-    width: 23rem;
-    background: $bg-primary-color;
-    border: 1px solid $tertiary-border-color;
-    box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-right: min(2%, 5%);
-    margin-left: min(2%, 5%);
-    padding: 2px;
+  box-sizing: border-box;
+  //   width: 23rem;
+  // background: $bg-primary-color;
+  // border: 1px solid $tertiary-border-color;
+  // box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
+  // margin-top: 5px;
+  // margin-bottom: 5px;
+  // margin-right: min(2%, 5%);
+  // margin-left: min(2%, 5%);
+  // padding: 2px;
+  border: none;
 }
 
 @media only screen and (max-width: 600px) {
-    .category-card-container {
-        box-sizing: border-box;
-        width: 17rem;
-        background-color: $bg-primary-color;
-        border: 1px solid $tertiary-border-color;
-        box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
-        margin-top: 1px;
-        margin-bottom: 1px;
-        margin-right: min(2%, 5%);
-        margin-left: min(2%, 5%);
-        padding: 0px;
-    }
+  .category-card-container {
+    box-sizing: border-box;
+    width: 17rem;
+    background-color: $bg-primary-color;
+    border: 1px solid $tertiary-border-color;
+    box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
+    margin-top: 1px;
+    margin-bottom: 1px;
+    margin-right: min(2%, 5%);
+    margin-left: min(2%, 5%);
+    padding: 0px;
+  }
 }
 
 .category-card-title {
-    font-size: 20px;
-    line-height: 30px;
-    color: $title-secondary-color;
+  font-size: 20px;
+  line-height: 30px;
+  color: $title-secondary-color;
 }
 .category-card-image {
-    object-fit: cover;
-    height: auto;
-    width: 5rem;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 3px;
-    margin-bottom: 3px;
+  object-fit: cover;
+  height: auto;
+  width: 5rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
 .category-card-body-text {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 20px;
-    color: $text-secondary-color;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  color: $text-secondary-color;
 }
 
-.profile-image-add-icon-container{
-    display: flex;
-    position: absolute;
-    margin-left: 5.5rem;
-    margin-top: -5.5rem;    
-    justify-content: center;
-    align-items: center;   
-    background-color: $success-color;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 1rem;
-    
+.profile-image-add-icon-container {
+  display: flex;
+  position: absolute;
+  margin-left: 5.5rem;
+  margin-top: -5.5rem;
+  justify-content: center;
+  align-items: center;
+  background-color: $success-color;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 1rem;
 }
-.profile-image-icon-container{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    width: 8rem;
-    height: 8rem;
-    border-radius: 4rem;
-}
-
-.consultant-image-icons{
-    color: $text-tertiary-color;
+.profile-image-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 4rem;
 }
 
-.service-card-consultant-name-container{
-    background-color: $bg-secondary-color;
-    padding: 5px;
-    padding-left: 6.5rem;
-    overflow: hidden;
-   text-overflow: ellipsis;
-   display: -webkit-box;
-   -webkit-line-clamp: 1; /* number of lines to show */
-           line-clamp: 1; 
-   -webkit-box-orient: vertical;
+.consultant-image-icons {
+  color: $text-tertiary-color;
+}
 
+.service-card-consultant-name-container {
+  background-color: $bg-secondary-color;
+  padding: 5px;
+  padding-left: 6.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* number of lines to show */
+  line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
