why choose section added

--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -6,18 +6,20 @@ $softGray: #dadada; //line
 $lightGray: #f2f2f2; //w2
 $lowLightGray: #f8f8f8; //w3
 $white: #ffffff; //w1
-$mediumGray:#F8F8F8; //w3
+$mediumGray: #f8f8f8; //w3
 
-$softBlue:#1174A8;
-$darkBlue: #022C42;
-$lightBlue: #C0E1FF;
-$purple: #4856DF;
+$softBlue: #1174a8;
+$darkBlue: #022c42;
+$lightBlue: #c0e1ff;
+$purple: #4856df;
 
-$red: #B93434;
+$red: #b93434;
 
-$green: #33935C;
-$brightGreen: #00D870;
+$green: #33935c;
+$brightGreen: #00d870;
 
-$softYellow:#FEC80A;
+$softYellow: #fec80a;
 
-$homeBackgroundColor:#014364
+$homeBackgroundColor: #014364;
+
+$whyChooseConsultingAppBG: #e9f4fd;
