--- a/src/components/organisms/homeScreen/_index.scss
+++ b/src/components/organisms/homeScreen/_index.scss
@@ -1,8 +1,11 @@
 .category-view-btn {
-    font-size: 18px;
-    padding: 14px 40px;
+  font-size: 18px;
+  padding: 14px 40px;
 }
 
 .category-header {
-    color: $softBlack
+  color: $softBlack;
+}
+.why-choose {
+  background-color: $whyChooseConsultingAppBG;
 }
