--- a/src/components/molecules/cards/_index.scss
+++ b/src/components/molecules/cards/_index.scss
@@ -1,7 +1,7 @@
 .main-container {
-  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+  // box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  max-width: 18rem;
+  // max-width: 18rem;
   min-width: 17rem;
 }
 
@@ -88,10 +88,10 @@
 }
 
 .consult-card-container {
-  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+  // box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
   border-radius: 7px;
-  margin: 10px;
-  max-width: 18.75rem;
+  // margin: 10px;
+  // max-width: 18.75rem;
   overflow: hidden;
 }
 
