--- a/src/pages/home/_index.scss
+++ b/src/pages/home/_index.scss
@@ -1,3 +1,12 @@
-.home-container{
+.home-container {
   margin-top: 100vh;
+}
+.text-4f4f4f {
+  color: $darkGray;
+}
+.text-828282 {
+  color: $gray;
+}
+.text-333 {
+  color: $softBlack;
 }
