start your career section added

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -516,6 +516,9 @@ input[type='number'] {
 .why-choose {
   background-color: #e9f4fd; }
 
+.bg-1174 {
+  background-color: #1174a8; }
+
 .auth-form-container {
   background-color: #ffffff;
   height: 100vh; }
