--- a/src/components/organisms/homeOnboarding/_index.scss
+++ b/src/components/organisms/homeOnboarding/_index.scss
@@ -1,50 +1,55 @@
-.onboarding-container{
+.onboarding-container {
   position: absolute;
   top: 0;
   height: 100vh;
   left: 0;
-  background-color:$homeBackgroundColor ;
+  background-color: $homeBackgroundColor;
   display: flex;
   align-items: center;
   padding: 3rem;
-  .container{
+  .container {
     opacity: 0;
-    background-color:$title-primary-color;
+    background-color: $title-primary-color;
   }
   @media (max-width: 768px) {
     .container {
-        opacity: 0.5;
+      opacity: 0.5;
     }
   }
 }
 
-.onboarding-container-background-image{
+.onboarding-container-background-image {
   position: absolute;
-  right:0;
-  top:5rem;
- 
+  right: 0;
+  top: 5rem;
 }
 
-
-.onboarding-title{
+.onboarding-title {
   color: $text-tertiary-color;
   line-height: 1;
   font-size: 10vw;
   @media (min-width: 500px) {
-      font-size: 60px;
-  
-  }
-  
-  /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
-  @media(max-width: 600px) {
-      font-size: 10vw;
+    font-size: 60px;
   }
 
+  /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+  @media (max-width: 600px) {
+    font-size: 10vw;
+  }
 }
 
-.onboarding-description{
+.onboarding-description {
   margin-top: 2rem;
   color: $text-fourth-color;
-
 }
 
+.search-result {
+  color: $lightGray;
+  border-color: #a4a4a4;
+  border-radius: 5px;
+  font-weight: 300;
+  cursor: pointer;
+  padding: 6px 20px;
+  border: 1px solid;
+  margin-bottom: 8px;
+}
